--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,1 +1,44 @@
 @import "bootstrap/scss/bootstrap";
+@import "dashboard";
+@import "roles";
+
+.sidebar {
+    background-color: #026B5B;
+    padding-top: 20px;
+    height: 99vh;
+    .navbar {
+        li {
+            padding: 10px 15px;
+            border-radius: 10px;
+            img {
+                display: inline-block;
+                height: 20px;
+                width: 20px;
+                margin: 10px;
+            }
+            a {
+                color: #FFFFFF;
+                text-decoration: none;
+                font-weight: 700;
+            }
+        }
+        li.active {
+            background-color: #FFFFFF;
+            a {
+                color: #026B5B;
+            }
+        }
+    }
+}
+.logout {
+    text-decoration: none;
+    font-weight: 800;
+    img {
+        display: inline-block;
+        height: 20px;
+        width: 20px;
+        margin-right: 10px;
+    }
+
+}
+
