--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -5,7 +5,7 @@
 .sidebar {
     background-color: #026B5B;
     padding-top: 20px;
-    height: 99vh;
+    min-height: 99vh;
     .navbar {
         li {
             padding: 10px 15px;
@@ -39,6 +39,8 @@
         width: 20px;
         margin-right: 10px;
     }
-
+}
+nav.border-b {
+    border-bottom: solid 0.5px #000000;
 }
 
