--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,6 +1,7 @@
 @import "bootstrap/scss/bootstrap";
 @import "dashboard";
 @import "roles";
+@import "createrequest";
 
 .sidebar {
     background-color: #026B5B;
